--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: kyua
 Section: devel
 Priority: optional
 Maintainer: Craig Rodrigues <rodrigc@FreeBSD.org>
-Build-Depends: debhelper (>= 9), autotools-dev, libatf-dev, liblutok-dev
+Build-Depends: debhelper (>= 9), autotools-dev, pkg-config, libatf-dev, liblua5.2-dev, liblutok-dev, libsqlite3-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/jmmv/kyua
 #Vcs-Git: git://git.debian.org/collab-maint/kyua.git
